--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/juancabana/backend-pokedex#readme",
   "dependencies": {
     "@hapi/boom": "^10.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "mysql2": "^3.0.1",
